# DataAnalysis

./: .gitignore  analysis_advanced.py  analysis_basic.py  analysis_correlation.py  analysis_raw.py  convert_xlsx_to_csv.py  make_dummy.py  make_panel.py  pref.py  process_specialization.py  pyproject.toml
results/basic/: basic.csv  results_fe.txt  results_re.txt
results/ols_fe_per_year/: 2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  2021.txt  2022.txt
results/ols_per_year/: 2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  2021.txt  2022.txt
results/panelols/: results_fe.txt  results_fe_extract.txt  results_re.txt
results/raw/: disability_ratio.csv
results/specialization/: basic_analysis.csv  ols_analysis_2020_LCLR.txt  ols_analysis_2020_SCLR.txt  ols_analysis_2020_TDER.txt  ols_analysis_2020_TDER_drop_fudousan.txt  ols_analysis_2020_TDER_drop_nourin.txt  ols_analysis_2020_保険衛生・社会事業_特化係数.txt  ols_analysis_2020_情報通信業_特化係数.txt  panel_fe.txt  panel_fe_LCLR.txt  panel_fe_SCLR.txt  panel_fe_TDER.txt  panel_fe_TDER_drop_hudousan.txt  panel_fe_TDER_drop_nourin.txt  panel_fe_保険衛生・社会事業_特化係数.txt  panel_fe_情報通信業_特化係数.txt
