[tool.poetry]
name = "dataanalysis"
version = "0.1.0"
description = ""
authors = ["r-wata <ryusei.watanabe@fuji.waseda.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
statsmodels = "^0.14.1"
linearmodels = "^5.3"
seaborn = "^0.13.1"
japanize-matplotlib = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
